import { Inner, Wrapper } from './Signin'

export default { title: 'templates' }

export const SignIn = () => (
  <Wrapper>
    <Inner />
  </Wrapper>
)
